--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta property="og:url" content="https://sasahara87.github.io/Rebuild/" /> <!--③-->
     <meta property="og:title" content="デモサイト" /> <!--④-->
     <meta property="og:description" content="会社案内をイメージして作成" /> <!--⑤-->
-    <meta property="og:image" content="https://photos.app.goo.gl/6rc79S3vtJbBhKZTA/"> <!--⑥-->
+    <meta property="og:image" content="https://photos.app.goo.gl/6rc79S3vtJbBhKZTA/" /> <!--⑥-->
+
     <link rel="stylesheet" href="css/top.css">
     <title>REbuild</title>
 </head>
