--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://sasahara87.github.io/Rebuild/" /> <!--③-->
     <meta property="og:title" content="デモサイト" /> <!--④-->
     <meta property="og:description" content="会社案内をイメージして作成" /> <!--⑤-->
-    <meta property="og:image" content="https://photos.app.goo.gl/6rc79S3vtJbBhKZTA/" /> <!--⑥-->
+    <meta property="og:image" content="https://lh3.googleusercontent.com/pw/AJFCJaURKI-HiFdO8dN2zhR6m2nX5unv4GCxgGspscylReffZsu-5qoHtpLU0WobLCM82sk5f3848_FbjXbhQJH7Pix294iXsS9jJjwJHicg4Ul8hz8bqQbGMj8Vh5vETFs5vIKgkPrmTtNoEAwadunADYdbRw=w974-h649-s-no?authuser=0" /> <!--⑥https://photos.app.goo.gl/6rc79S3vtJbBhKZTA/-->
 
     <link rel="stylesheet" href="css/top.css">
     <title>REbuild</title>
